--- a/mcbnsobreparejaideals.html
+++ b/mcbnsobreparejaideals.html
@@ -2,26 +2,20 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>MCB de N sobre Pareja Ideal S con mejora de la aceptación</title>
+  <title>MCB S sobre Pareja Ideal N con mejora de la proactividad</title>
   <style>
     body {
       margin: 0;
-      background: #ffffff;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
+      background-color: white;
     }
     video {
-      max-width: 90vw;
-      max-height: 90vh;
+      width: 100%;
+      height: auto;
+      display: block;
     }
   </style>
 </head>
 <body>
-  <video autoplay loop muted playsinline>
-    <source src="MCB N sobre Pareja Ideal S.mp4" type="video/mp4">
-    Tu navegador no soporta la reproducción de video.
-  </video>
+  <video src="MCB%20S%20sobre%20Pareja%20Ideal%20N.mp4" autoplay loop muted playsinline></video>
 </body>
 </html>
