--- a/mcbn.html
+++ b/mcbn.html
@@ -6,22 +6,16 @@
   <style>
     body {
       margin: 0;
-      background: #ffffff;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
+      background-color: white;
     }
     video {
-      max-width: 90vw;
-      max-height: 90vh;
+      width: 100%;
+      height: auto;
+      display: block;
     }
   </style>
 </head>
 <body>
-  <video autoplay loop muted playsinline>
-    <source src="MCB N.mp4" type="video/mp4">
-    Tu navegador no soporta la reproducción de video.
-  </video>
+  <video src="MCB%20N.mp4" autoplay loop muted playsinline></video>
 </body>
 </html>
