--- a/mcbs.html
+++ b/mcbs.html
@@ -1,31 +1,21 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MCB S con mejora de proactividad</title>
+  <title>MCB S con mejora de la proactividad</title>
   <style>
     body {
       margin: 0;
-      background-color: #ffffff; /* Fondo blanco */
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
+      background-color: white;
     }
-
     video {
-      max-width: 100%;
-      max-height: 100%;
+      width: 100%;
+      height: auto;
       display: block;
     }
   </style>
 </head>
 <body>
-  <video autoplay loop muted playsinline>
-    <source src="MCB S.mp4" type='video/mp4'>
-    Tu navegador no soporta el video HTML5.
-  </video>
+  <video src="MCB%20S.mp4" autoplay loop muted playsinline></video>
 </body>
 </html>
