--- a/mcbnsobreparejaideals.html
+++ b/mcbnsobreparejaideals.html
@@ -16,6 +16,6 @@
   </style>
 </head>
 <body>
-  <video src="MCB%20S%20sobre%20Pareja%20Ideal%20N.mp4" autoplay loop muted playsinline></video>
+  <video src="MCBSsobreParejaIdealN.mp4" autoplay loop muted playsinline></video>
 </body>
 </html>
