--- a/mcbssobreparejaidealn.html
+++ b/mcbssobreparejaidealn.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>MCB N sobre Pareja Ideal S con mejora de aceptación</title>
+  <title>MCB S sobre Pareja Ideal N con mejora de aceptación</title>
   <style>
     body {
       margin: 0;
@@ -16,7 +16,7 @@
   </style>
 </head>
 <body>
-  <video src="MCB%20N%20sobre%20Pareja%20Ideal%20S.mp4" autoplay loop muted playsinline></video>
+  <video src="MCBSsobreParejaIdealN.mp4" autoplay loop muted playsinline></video>
 </body>
 </html>
 </html>
