--- a/mcbnsobreparejaideals.html
+++ b/mcbnsobreparejaideals.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>MCB S sobre Pareja Ideal N con mejora de la proactividad</title>
+  <title>MCB N sobre Pareja Ideal S con mejora de la aceptación</title>
   <style>
     body {
       margin: 0;
@@ -16,6 +16,6 @@
   </style>
 </head>
 <body>
-  <video src="MCBSsobreParejaIdealN.mp4" autoplay loop muted playsinline></video>
+  <video src="MCBNsobreParejaIdealS.mp4" autoplay loop muted playsinline></video>
 </body>
 </html>
