--- a/mcbssobreparejaidealn.html
+++ b/mcbssobreparejaidealn.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>MCB S sobre Pareja Ideal N con mejora de aceptación</title>
+  <title>MCB S sobre Pareja Ideal N con mejora de proactividad</title>
   <style>
     body {
       margin: 0;
