--- a/MCB_S_sobre_Pareja_Ideal_N.html
+++ b/MCB_S_sobre_Pareja_Ideal_N.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>MCB S sobre Pareja Ideal N</title>
+  <title>MCB S sobre Pareja Ideal N con mejora de proactividad</title>
   <style>
     body {
       margin: 0;
@@ -16,6 +16,7 @@
   </style>
 </head>
 <body>
-  <video src="MCB%20S%20sobre%20Pareja%20Ideal%20N.mp4" autoplay loop muted playsinline></video>
+  <video src="MCBSsobreParejaIdealN.mp4" autoplay loop muted playsinline></video>
 </body>
+</html>
 </html>
