--- a/MCB_N.html
+++ b/MCB_N.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>MCB N</title>
+  <title>MCB N con mejora de la aceptación</title>
   <style>
     body {
       margin: 0;
