--- a/MCB_N_sobre_Pareja_Ideal_S.html
+++ b/MCB_N_sobre_Pareja_Ideal_S.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>MCB N sobre Pareja Ideal S</title>
+  <title>MCB N sobre Pareja Ideal S con mejora de la aceptación</title>
   <style>
     body {
       margin: 0;
@@ -16,6 +16,6 @@
   </style>
 </head>
 <body>
-  <video src="MCB%20N%20sobre%20Pareja%20Ideal%20S.mp4" autoplay loop muted playsinline></video>
+  <video src="MCBNsobreParejaIdealS.mp4" autoplay loop muted playsinline></video>
 </body>
 </html>
