--- a/MCB_S.html
+++ b/MCB_S.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>MCB S sobre Pareja Ideal N con mejora de proactividad</title>
+  <title>MCB S con mejora de la proactividad</title>
   <style>
     body {
       margin: 0;
@@ -16,7 +16,6 @@
   </style>
 </head>
 <body>
-  <video src="MCBSsobreParejaIdealN.mp4" autoplay loop muted playsinline></video>
+  <video src="MCB%20S.mp4" autoplay loop muted playsinline></video>
 </body>
-</html>
 </html>
