--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Índice de Visualizaciones del TFG</title>
+  <title>Archivos TFG</title>
   <style>
     body {
       font-family: sans-serif;
@@ -31,14 +31,14 @@
 <body>
   <h1>Índice de visualizaciones del TFG</h1>
   <ul>
-    <li><a href="graphoptn.html">Graph Opt N</a></li>
-    <li><a href="graphopts.html">Graph Opt S</a></li>
-    <li><a href="graphoptidealn.html">Graph Opt Ideal N</a></li>
-    <li><a href="graphoptideals.html">Graph Opt Ideal S</a></li>
-    <li><a href="mcbnys.html">MCB N + YS</a></li>
-    <li><a href="mcbn.html">MCB N</a></li>
-    <li><a href="mcbsyn.html">MCB SY + N</a></li>
-    <li><a href="mcbs.html">MCB S</a></li>
+    <li><a href="graphoptn.html">DIGRAFO N.</a></li>
+    <li><a href="graphopts.html">DIGRAFO S.</a></li>
+    <li><a href="graphoptidealn.html">DIGRAFO IDEAL N.</a></li>
+    <li><a href="graphoptideals.html">DIGRAFO IDEAL S.</a></li>
+    <li><a href="mcbnys.html">MCB N. RESPECTO A PAREJA IDEAL DE S. CON MEJORA DE ACEPTACIÓN</a></li>
+    <li><a href="mcbn.html">MCB N. CON MEJORA DE ACEPTACIÓN</a></li>
+    <li><a href="mcbsyn.html">MCB S. RESPECTO A PAREJA IDEAL DE N. CON MEJORA DE PRODUCTIVIDAD</a></li>
+    <li><a href="mcbs.html">MCB S CON MEJORA DE PRODUCTIVIDAD</a></li>
   </ul>
 </body>
 </html>
