--- a/mcbssobreparejaidealn.html
+++ b/mcbssobreparejaidealn.html
@@ -16,7 +16,7 @@
   </style>
 </head>
 <body>
-  <video src="MCBSsobreParejaIdealN.mp4" autoplay loop muted playsinline></video>
+  <video src="MCB_S_sobre_Pareja_Ideal_N.mp4" autoplay loop muted playsinline></video>
 </body>
 </html>
 </html>
