--- a/mcbnsobreparejaideals.html
+++ b/mcbnsobreparejaideals.html
@@ -16,6 +16,6 @@
   </style>
 </head>
 <body>
-  <video src="MCB_N_sobre_Pareja_Ideal_S.mp4" autoplay loop muted playsinline></video>
+  <video src="MCBNsobreParejaIdealS.mp4" autoplay loop muted playsinline></video>
 </body>
 </html>
