--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <li><a href="graphoptideals.html">DIGRAFO IDEAL S.</a></li>
     <li><a href="mcbnys.html">MCB N. RESPECTO A PAREJA IDEAL DE S. CON MEJORA DE ACEPTACIÓN</a></li>
     <li><a href="mcbn.html">MCB N. CON MEJORA DE ACEPTACIÓN</a></li>
-    <li><a href="mcbsyn.html">MCB S. RESPECTO A PAREJA IDEAL DE N. CON MEJORA DE PRODUCTIVIDAD</a></li>
-    <li><a href="mcbs.html">MCB S CON MEJORA DE PRODUCTIVIDAD</a></li>
+    <li><a href="mcbsyn.html">MCB S. RESPECTO A PAREJA IDEAL DE N. CON MEJORA DE PROACTIVIDAD</a></li>
+    <li><a href="mcbs.html">MCB S. CON MEJORA DE PROACTIVIDAD</a></li>
   </ul>
 </body>
 </html>
