--- a/MCB_S_sobre_Pareja_Ideal_N.html
+++ b/MCB_S_sobre_Pareja_Ideal_N.html
@@ -16,7 +16,7 @@
   </style>
 </head>
 <body>
-  <video src="MCB%20S%20sobre%20Pareja%20Ideal%20N" autoplay loop muted playsinline></video>
+  <video src="MCBSB.mp4" autoplay loop muted playsinline></video>
 </body>
 </html>
 </html>
