--- a/mcbssobreparejaidealn.html
+++ b/mcbssobreparejaidealn.html
@@ -16,7 +16,7 @@
   </style>
 </head>
 <body>
-  <video src="MCBSN.mp4" autoplay loop muted playsinline></video>
+  <video src="MCB%20S%20sobre%20Pareja%20Ideal%20N.mp4" autoplay loop muted playsinline></video>
 </body>
 </html>
 </html>
